--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!--------------------------------------intro---------------------------------------->
     <header>
         <nav>
-            <a href="#introduction">About</a>
-            <a href="#work-experience">Work Experience</a>
-            <a href="#education">Education</a>
-            <a href="#contact">Contact</a>
+            <a href="#introduction">Über mich</a>
+            <a href="#work-experience">Arbeitserfahrung</a>
+            <a href="#education">Bildung</a>
+            <a href="#contact">Kontakt</a>
         </nav>
         <div class="content-wrap">
              <img class="profile-img" src="./assets/profile_foto.png" alt="profile foto" />
@@ -33,9 +33,11 @@
     <!-------------------About me-------------->
     <section id="introduction" class="introduction">
         <div class="introduction-wrapper">
-            <h2>About me</h2>
+            <h2>Über mich</h2>
             <p>
-                Hallo, mein Name ist Huimin, komme ursprünglich aus China und lebe seit 20 Jahren in Deutschland.
+                Hallo, ich heiße Huimin und stamme aus China. Im Jahr 2003 bin ich zum Studium nach Deutschland gekommen. 
+                Seit mehr als zwei Jahrzehnten lebe ich hier und habe in verschiedenen Branchen gearbeitet. 
+                Mein beruflicher Weg war nicht immer einfach, aber ich kämpfe immer für meine Zukunft in diesem freien Land.
             </p>
             <p>
                 Am 05.06.2024 habe ich erfolgreich meine Prüfung zur Fachinformatikerin bei der IHK Essen bestanden.
@@ -54,7 +56,7 @@
     <section id="work-experience" class="work-experience">
         <div class="work-wrapper">
 
-            <h2>Work Experience</h2>
+            <h2>Arbeitserfahrung</h2>
   
             <!-----------------------------job 1-->
             <div class="job-wrapper">
@@ -81,7 +83,7 @@
     <section id="education" class="education">
         
         <div class="education-wrapper">
-            <h2>Education</h2>
+            <h2>Bildung</h2>
 
 
             <!-------------ausbildung 1-->
